--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,6 +447,7 @@ article.container::before{
   content: "";
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 40px;
   background-image:var(--gradient-1) ;
@@ -566,7 +567,7 @@ article.container::before{
 
 }
 .slider-list{
-  display: flex;
+  display:flex;
   gap: 12px;
 }
 .slider-list::before,
@@ -619,3 +620,13 @@ article.container::before{
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
+
+@media(min-width:768px){
+  .container{padding: 24px;}
+  .title-1{ --title-1:2.4rem}
+  .section >.title-2{margin-block-end}
+
+
+
+  
+}
