--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ button{cursor: pointer;}
 sub{vertical-align: baseline;}
 sup{vertical-align: top;}
 sub, sup{font-size: 0.75em;}
+
 html{
   font-family: var(--ff-nunito-sans);
   font-size: 10px;
@@ -262,7 +263,7 @@ body{
 }
 .card-sm{
   border-radius: var(--radius-16) ;
-  padding: 160px;
+  padding: 16px;
 }
 .heading{
   color: var(--white);
@@ -301,7 +302,8 @@ body{
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
-.header .btn-primary .span{
+
+.header.btn-primary.span{
   display: none;
 }
 .logo img{
@@ -312,7 +314,7 @@ body{
   display: flex;
   align-items: center;
 }
-.header .container{
+.header.container{
   justify-content: space-between;
 }
 .header-actions{
@@ -327,7 +329,7 @@ body{
   left: 0;
   width: 100%;
   height: 100hv;
-  /* height: 100shv; for mobile */
+  height: 100shv;
   background-color: var(--surface);
   color: var(--on-surface);
   clip-path: circle(4% at calc(100% -102px) 5%);
@@ -379,7 +381,7 @@ body{
 .search-field::-webkit-search-cancel-button{
   display: none;
 }
-.search-wrapper .leading-icon{
+.search-wrapper.leading-icon{
   position: absolute;
   top: 50%;
   left: 28px;
@@ -387,11 +389,11 @@ body{
 }
 .search-wrapper > m-icon{display: none;}
 
-.search-wrapper .icon-btn{
+.search-wrapper.icon-btn{
   background-color: transparent;
   box-shadow: none;
 }
-.search-view .view-list{
+.search-view.view-list{
   padding-block: 8px 16px;
 }
 .search-view.view-item{
@@ -421,7 +423,7 @@ body{
 
 main{
   height: calc(100hv -80px);
-  /* height: calc(100shv -80px);  for mobile */
+  height: calc(100shv -80px);
   overflow: hidden;
 }
 article.container{
@@ -430,7 +432,7 @@ article.container{
   grid-template-columns: minmax(0 ,1fr);
   gap: 20px;
   height: 100%;
-  /* overflow-y:auto; firefox only */
+  overflow-y:auto;
   overflow-y:overlay;
 }
 article.container::-webkit-scrollbar-thumb{
@@ -500,23 +502,22 @@ article.container::before{
 
 .forecast-card .title-2{
   margin-block-end: 0;
-  
 }
-.forecast-card:is(.card-item, .icon-wrapper){
+.forecast-card:is(.card-item,.icon-wrapper){
   display: flex;
   align-items: center;
 }
-.forecast-card .card-item:not(:last-child){
+.forecast-card.card-item:not(:last-child){
   margin-block-end: 12px;
 }
-.forecast-card .icon-wrpper{
+.forecast-card.icon-wrapper{
   gap: 8px;
 }
 .forecast-card .label-1{
   color: var(--on-surface-variant);
   font-weight: var(--weight-semiBold);
 }
-.forecast-card .card-item > .label-1{
+.forecast-card .card-item >.label-1{
   width: 100%;
   text-align: right;
 }
@@ -542,15 +543,62 @@ article.container::before{
   background-color: var(--black-alpha-10);
   position: relative;
 }
+.highlight-card :is(.wrapper, .card-list, .card-item){
+  display: flex;
+  align-items: center;
+}
 .highlight-card .wrapper{
   justify-content: space-between;
   gap: 16px;
+}
+.highlight-card .card-item{
+  width: 50%;
+  justify-content: flex-end;
+  gap: 4px;
+}
+.highlight-card .label-1{
+  color: var(--on --on-surface-variant);
+}
+.badge{
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  padding: 2px 12px;
+  border-radius: var(--radius-pill);
+  font-weight:var(--weight-semiBold);
+  cursor: help;
+}
+.badge.aqi-1{
+  background-color: var(--bg-aqi-1);
+
+}
+.badge.aqi-2{
+  background-color: var(--bg-aqi-2);
+  color: var(--on-bg-aqi-2);
+}
+.badge.aqi-3{
+  background-color: var(--bg-aqi-3);
+  color: var(--on-bg-aqi-3);
+}
+.badge.aqi-4{
+  background-color: var(--bg-aqi-4);
+  color: var(--on-bg-aqi-4);
+}
+.badge.aqi-5{
+  background-color: var(--bg-aqi-5);
+  color: var(--on-bg-aqi-5);
 }
 .highlight-card .card-list{
   flex-wrap: wrap;
   flex-grow: 1;
   row-gap: 8px;
 }
+.highlight-card.two .card-item{
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 8px 16px;
+}
+.highlight-card.two .label-1{margin-block-end: 4px;}
 .highlight-card .label-1{
   color: var(--on-surface-variant);
 }
