--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ input{width: 100%;}
 button{cursor: pointer;}
 sub{vertical-align: baseline;}
 sup{vertical-align: top;}
-sub, sup{font-size: 0.75em;}
+sub,sup{font-size: 0.75em;}
 
 html{
   font-family: var(--ff-nunito-sans);
@@ -140,13 +140,14 @@ body{
   overflow:hidden;
   height: 300vh;
 }
-:focus-visible{
+:focus-visible {
   outline: 2px solid var(--white);
   outline-offset: 2px;
 }
-::selection{background-color: var(--white-alpha-8);}
-::-webkit-scrollbar{
-  width: 6px;
+::selection {background-color: var(--white-alpha-8);}
+
+::-webkit-scrollbar {
+  width: 1px;
   height: 6px; /*horizontal scroll */
 }
 ::-webkit-scrollbar-thumb{
@@ -222,7 +223,7 @@ body{
 .has-state:hover::before{
   background-color: var(--white-alpha-4);
 }
-.has-state:is(:focus,:focus-visible)::before{
+.has-state:is(:focus, :focus-visible)::before{
   background-color: var(--white-alpha-8);
   animation: ripple 250ms ease forwards;
 }
@@ -439,7 +440,7 @@ article.container::-webkit-scrollbar-thumb{
   background-color: transparent;
 }
 
-article.container:is(:hover,:focus-within):-webkit-scrollbar-thumb{
+article.container:is(:hover, :focus-within)::-webkit-scrollbar-thumb{
   background-color: var(--white-alpha-8);
 }
 article.container::-webkit-scrollbar-button{
@@ -489,7 +490,7 @@ article.container::before{
   align-items: center;
   gap: 8px;
 }
-.current-weather-card.meta-item:not(:last-child){
+.current-weather-card .meta-item:not(:last-child){
   margin-block-end: 12px;
 }
 .current-weather-card .meta-text{
@@ -517,7 +518,7 @@ article.container::before{
   color: var(--on-surface-variant);
   font-weight: var(--weight-semiBold);
 }
-.forecast-card .card-item >.label-1{
+.forecast-card .card-item > .label-1{
   width: 100%;
   text-align: right;
 }
@@ -644,6 +645,32 @@ article.container::before{
   margin-block: 12px;
 }
 
+/*-----------------------------------*\
+  #Loading
+\*-----------------------------------*/
+.loading{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background);
+  /* display: grid; */
+  place-items: center;
+  z-index: 1;
+  display: none;
+}
+.loading::before{
+  content: "";
+  width: 48px;
+  height: 48px;
+  border: 4px solid var(--on-background);
+  border-radius: var(--radius-circle);
+  animation: loading 500ms linear infinite;
+}
+
+
+
 
 /*-----------------------------------*\
   #ERROR SECTION
@@ -666,22 +693,22 @@ article.container::before{
 \*-----------------------------------*/
 
 @media(min-width: 768px){
-  .container{padding: 24px;}
-  .title-1{ --title-1:2.4rem}
-  .section  > .title-2{margin-block-end: 16px;}
-  .card-lg{padding:24px}
-  .card-sm{
+  .container {padding: 24px;}
+  .title-1 { --title-1:2.4rem}
+  .section  > .title-2 {margin-block-end: 16px;}
+  .card-lg {padding:24px}
+  .card-sm {
     padding: 20px;
     display: grid;
     grid-template-rows: min-content 1fr;
   }
-  .badge{
+  .badge {
     top: 20px;
     right: 20px;
 
   }
-  .header-actions{gap:24px;}
-  .header .btn-primary{padding-inline: 16px 24px;}
+  .header-actions {gap:24px;}
+  .header .btn-primary {padding-inline: 16px 24px;}
   .header .btn-primary .span {display: block;}
   
   .search-view{clip-path: circle(3% at calc(100% -273px) 6%);}
@@ -706,7 +733,7 @@ article.container::before{
   .forecast-card .card-item:not(:last-child){
     margin-block-end: 16px;
   }
-  .highlight-list{
+  .highlight-list {
     grid-template-columns: 1fr 1fr;
   }
   .highlight-card:nth-child(-n+2){
@@ -745,11 +772,11 @@ article.container::before{
   .container{padding: 40px;}
   .card-lg{padding: 36px;}
   .card-sm{padding: 24px;}
-  .title-1{--title-1:3.6rem}
+  .title-1{--title-1: 3.6rem}
   .highlight-card.two .card-item{column-gap: 24px;}
 
 
-  .header.icon-btn{display: none;}
+  .header .icon-btn{display: none;}
   .logo img{width: 200px;}
   .header{
     position: relative;
@@ -769,7 +796,7 @@ article.container::before{
     animation: none;
   }
   .search-wrapper{border-block-end:none;}
-  /* .search-wrapper > .m-icon{display:block;} */
+  .search-wrapper > .m-icon{display:block;}
 
   .search-field,
   .search-view .view-list{
@@ -780,7 +807,7 @@ article.container::before{
     border-radius: var(--radius-28);
   }
   .search-result,
-  .search-view:not(:focus-within).search-result.active{
+  .search-view:not(:focus-within) .search-result{
     display: none;
   }
   .search-view:focus-within .search-result.active{display: block;}
@@ -804,6 +831,7 @@ article.container::before{
     min-height: 120px;
   }
   .search-view .view-list::-webkit-scrollbar-button{height: 20px;}
+
   .search-view:is(:hover, :has(.view-list):hover){
     filter: drop-shadow(var(--shadow-1));
   }
@@ -834,5 +862,5 @@ article.container::before{
 
 
 @media(min-width:1400px){
-  .highlight-list{grid-template-columns: repeat(4,1fr);}
+  .highlight-list{grid-template-columns: repeat(4, 1fr);}
 }
